[package]
name = "bb8-memcached"
version = "0.2.0"
authors = ["Daniel Dao <dqminh89@gmail.com>"]
edition = "2018"
readme = "README.md"
license = "MIT"
description = "async connection pool for memcached, based on bb8 and memcache-async"
keywords = ["memcache", "memcached", "cache", "database", "async"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bb8 = "0.5"
async-trait = "0.1"
memcache-async = "^0.4.3"
futures = "0.3"
url = "2"
tokio = { version = "0.2", features = ["rt-core",  "net", "sync", "time"] }

[dev-dependencies]
tokio = { version = "0.2", features = ["macros"] }
