[package]
name = "bb8-memcached"
version = "0.3.0"
authors = ["Daniel Dao <dqminh89@gmail.com>"]
edition = "2018"
readme = "README.md"
license = "MIT"
description = "async connection pool for memcached, based on bb8 and memcache-async"
keywords = ["memcache", "memcached", "cache", "database", "async"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bb8 = "0.7"
async-trait = "0.1"
memcache-async = "^0.6"
futures = "0.3"
url = "2"
tokio = { version = "1", features = ["rt",  "net", "sync", "time"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
